REFACTOR Buttons for save, publish etc.

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Dev/ConfigStateList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Dev/ConfigStateList.cshtml
@@ -30,19 +30,17 @@
 
 </div>
 
-<div id="page-info" style="display:none;">
+@section InfoItems {
 	<div data-info-for="info-config-states">
 		<span>Config States</span>
 		<div>
 			<p>
-				
+
 			</p>
 		</div>
 	</div>
+}
 
-
-
-</div>
 
 @section Scripts {
 	<script src="~/js/mshapp/msh-apiservice.js"></script>
