--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditOneTime.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditOneTime.cshtml
@@ -1,25 +1,317 @@
-﻿@using Msh.WebApp.Models.Admin
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Msh.Common.Models.OwsCommon
+@using Msh.HotelCache.Models.Discounts
+@using Msh.WebApp.Areas.Admin.Models
+@using Msh.WebApp.Models.Admin
+@using Msh.WebApp.TagHelpers
 
 @model Msh.HotelCache.Models.Discounts.DiscountOneTime;
 @{
-	ViewData["Title"] = "Edit Discount One-Time";
+	var title = "Edit Discount One-Time";
+	ViewData["Title"] = title;
 
 	var hotelCode = ViewBag.HotelCode;
-	var code = ViewBag.Code;
+	var itemCode = ViewBag.Code;
 
 	ViewBag.Success = new SuccessAlert
 	{
 		ModelName = "DiscountOneTime",
-		ReturnPath = "/admin/hotels/DiscountsList?hotelCode=" + hotelCode,
-		ReturnPathName = "Discounts List",
+		ReturnUrl = "/admin/hotels/DiscountsList?hotelCode=" + hotelCode,
+		ReturnText = "Discounts List",
 		KeyPropertyLabel = "Discount One-Time",
 		KeyPropertyName = "Code",
-		KeyPropertyValue = code,
+		KeyPropertyValue = itemCode,
 		FormAction = "DiscountEditOneTime"
 	};
+	var success = ViewBag.Success as SuccessAlert;
 }
 
-@await Html.PartialAsync("Hotels/_DiscountEditOneTime", @Model)
+
+<div class="text-center">
+	<h1 class="display-6">@title</h1>
+	<p>Edit error messages for Discount @itemCode in hotel @hotelCode</p>
+</div>
+
+@await Html.PartialAsync("Admin/_AdminSaveSuccess", success)
+
+
+<div class="row">
+	<div class="col-12">
+
+		<form asp-action="DiscountEditOneTime" asp-route-hotelCode="@hotelCode" asp-route-code="@itemCode" id="main-form">
+
+
+			<div class="row">
+				<div class="col-md-6 col-12">
+
+					<div class="form-group mb-3">
+						<label asp-for="Mode" class="control-label"></label>&nbsp;
+						<info-icon name="info-mode" />
+						<select asp-for="Mode" class="form-control " asp-items="Html.GetEnumSelectList<OneTimeMode>()"></select>
+						<span asp-validation-for="Mode" class="text-danger"></span>
+					</div>
+
+					<div class="form-group mb-3">
+						<label asp-for="HashMethod" class="control-label"></label>&nbsp;
+						<info-icon name="info-hash-method" />
+						<select asp-for="HashMethod" class="form-control " asp-items="Html.GetEnumSelectList<OneTimeHashVersion>()"></select>
+						<span asp-validation-for="HashMethod" class="text-danger"></span>
+					</div>
+
+					<div class="form-group mb-3">
+						<label asp-for="BookingStatus" class="control-label"></label>&nbsp;
+						<info-icon name="info-booking-status" />
+						<select asp-for="BookingStatus" class="form-control " asp-items="Html.GetEnumSelectList<BookingStatus>()"></select>
+						<span asp-validation-for="BookingStatus" class="text-danger"></span>
+					</div>
+
+					<div class="form-check form-switch mb-3">
+						<input asp-for="RequiresReservationId" type="checkbox" class="form-check-input " />
+						<label asp-for="RequiresReservationId" class="form-check-label"></label>&nbsp;
+						<info-icon name="info-requires-reservation-id" />
+					</div>
+
+
+					<div class="form-check form-switch mb-3">
+						<input asp-for="RequiresResvId" type="checkbox" class="form-check-input " />
+						<label asp-for="RequiresResvId" class="form-check-label"></label>&nbsp;
+						<info-icon name="info-requires-resv-id" />
+					</div>
+
+				</div>
+				<div class="col-md6 col-12">
+
+					<div class="form-check form-switch mb-3">
+						<input asp-for="RequiresProfileId" type="checkbox" class="form-check-input " />
+						<label asp-for="RequiresProfileId" class="form-check-label"></label>&nbsp;
+						<info-icon name="info-requires-profile-id" />
+					</div>
+
+
+					<div class="form-check form-switch mb-3">
+						<input asp-for="RequiresEmail" type="checkbox" class="form-check-input " />
+						<label asp-for="RequiresEmail" class="form-check-label"></label>&nbsp;
+						<info-icon name="info-requires-email" />
+					</div>
+
+
+					<div class="form-check form-switch mb-3">
+						<input asp-for="RequiresLogin" type="checkbox" class="form-check-input " />
+						<label asp-for="RequiresLogin" class="form-check-label"></label>&nbsp;
+						<info-icon name="info-requires-login" />
+					</div>
+
+
+					<div class="form-check form-switch mb-3">
+						<input asp-for="RequiresPastDepart" type="checkbox" class="form-check-input " />
+						<label asp-for="RequiresPastDepart" class="form-check-label"></label>&nbsp;
+						<info-icon name="info-requires-past-depart" />
+					</div>
+
+
+					<div class="form-check form-switch mb-3">
+						<input asp-for="AllowRollover" type="checkbox" class="form-check-input " />
+						<label asp-for="AllowRollover" class="form-check-label"></label>&nbsp;
+						<info-icon name="info-allow-rollover" />
+					</div>
+
+
+					<div class="form-check form-switch mb-3">
+						<input asp-for="UpdateBooker" type="checkbox" class="form-check-input " />
+						<label asp-for="UpdateBooker" class="form-check-label"></label>&nbsp;
+						<info-icon name="info-update-booker" />
+					</div>
+
+					<div class="form-group mb-3">
+						<label asp-for="ExpireCountMode" class="control-label"></label>&nbsp;
+						<info-icon name="info-expire-count" />
+						<select asp-for="ExpireCountMode" class="form-control " asp-items="Html.GetEnumSelectList<ExpireCountMode>()"></select>
+						<span asp-validation-for="ExpireCountMode" class="text-danger"></span>
+					</div>
+
+					<div class="form-group mb-3">
+						<label asp-for="ExpireCount" class="control-label"></label>&nbsp;
+						<info-icon name="info-expire-count" />
+						<input asp-for="ExpireCount" class="form-control " />
+						<span asp-validation-for="ExpireCount" class="text-danger"></span>
+					</div>
+
+				</div>
+			</div>
+
+
+			@await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
+			{
+				ReturnUrl = $"/Admin/Hotels/DiscountList?hotelCode={@hotelCode}&code={@itemCode}",
+				ReturnText = ConstReturnText.ReturnToList,
+				SaveOperation = "submit"
+			})
+
+		</form>
+
+	</div>
+</div>
+
+@* Info blocks for _HotelEdit.cshtml *@
+
+@section InfoItems {
+
+	<div data-info-for="info-mode">
+		<span>One-Time Mode</span>
+		<div>
+			<p>
+				Determines how a one-time discount is implemented.
+			</p>
+			<ul>
+				<li>
+					<p>
+						<strong>None - </strong>Default - this discount is not treated as a one-time offer.
+					</p>
+				</li>
+				<li>
+					<p>
+						<strong>Code - </strong>Requires a specific discount code (that might need to be hashed)
+					</p>
+				</li>
+				<li>
+					<p>
+						<strong>Reservation - </strong>Validates a previous reservation
+					</p>
+				</li>
+				<li>
+					<p>
+						<strong>Login - </strong>Validates using a login
+					</p>
+				</li>
+				<li>
+					<p>
+						<strong>Email - </strong>Validates using an email
+					</p>
+				</li>
+			</ul>
+		</div>
+	</div>
+
+	<div data-info-for="info-hash-method">
+		<span>One-Time Mode</span>
+		<div>
+			<p>
+				If the <strong>Code</strong> mode is used, which hash mode is used?
+			</p>
+			<ul>
+				<li>
+					<p>
+						<strong>None - </strong>Default - the code is not hashed.
+					</p>
+				</li>
+				<li>
+					<p>
+						<strong>Rfc2898 - </strong>Use the RFC 2898 hash method.
+					</p>
+				</li>
+
+			</ul>
+		</div>
+	</div>
+
+	<div data-info-for="info-booking-status">
+		<span>Booking Status</span>
+		<div>
+			<p>
+				Where a one-time discount is used, and it is a <strong>Reservation</strong> mode discount (it depends on a previous reservation),
+				what status is required on that previous reservation.
+			</p>
+			<p>
+				The default is <string>Any</string>, that is, the previous reservation can be in any state.
+			</p>
+			<p>
+				Typically, the customer is prevented from taking advantage of the one-time discount until their previous reservation reaches some other status,
+				such <b>InHouse</b>, or perhaps <b>CheckedOut</b>.
+			</p>
+			<p>
+				<em>
+					(A future implementation may make this a multiple status setting - e.g., either <b>InHouse</b> or <b>CheckedOut</b>)
+				</em>
+			</p>
+		</div>
+	</div>
+
+	<div data-info-for="info-requires-reservation-id">
+		<span>Requires Reservation Id</span>
+		<div>
+			<p>
+				The link used to initiate the one-time booking must contain the reservation ID of a previous booking.
+			</p>
+		</div>
+	</div>
+	<div data-info-for="info-requires-resv-id">
+		<span>Requires Resv Id</span>
+		<div>
+			<p>
+				The link used to initiate the one-time booking must contain the RESV ID of a previous booking.
+			</p>
+		</div>
+	</div>
+	<div data-info-for="info-requires-profile-id">
+		<span>Requires Profile Id</span>
+		<div>
+			<p>
+				The link used to initiate the one-time booking must contain the customer's Opera Profile ID associated with the previous booking.
+			</p>
+		</div>
+	</div>
+	<div data-info-for="info-requires-email">
+		<span>Requires Email</span>
+		<div>
+			<p>
+				The link used to initiate the one-time booking must contain the customer's email address associated with the previous booking.
+			</p>
+		</div>
+	</div>
+	<div data-info-for="info-requires-login">
+		<span>Requires Login</span>
+		<div>
+			<p>
+				The user must login to use the one-time reservation.
+			</p>
+		</div>
+	</div>
+	<div data-info-for="info-requires-past-depart">
+		<span>Requires Past Depart</span>
+		<div>
+			<p>
+				The user must have departed - typically determined by the status of the previous reservation.
+			</p>
+		</div>
+	</div>
+	<div data-info-for="info-allow-rollover">
+		<span>Allow Rollover</span>
+		<div>
+			<p>
+				A one-time booking may itself be used as the basis of a another one-time booking.
+			</p>
+		</div>
+	</div>
+	<div data-info-for="info-update-booker">
+		<span>Update Booker</span>
+		<div>
+			<p>
+
+			</p>
+		</div>
+	</div>
+	<div data-info-for="info-expire-count">
+		<span>Expire Count Mode</span>
+		<div>
+			<p>
+				The <b>Expire Count</b> is the number of days, weeks, etc., that must expire between the qualifying reservation and the one-time reservation.
+			</p>
+			<p>
+				The <b>Expire Count Mode</b> determines whether the number in <b>Expire Count</b> is days, weeks, etc.
+			</p>
+		</div>
+	</div>
+}
 
 @section Scripts {
 	<script src="~/js/mshapp/msh-apiservice.js"></script>
