--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelEdit.cshtml
@@ -5,8 +5,8 @@
 	ViewBag.Success = new SuccessAlert
 	{
 		ModelName = "Hotel",
-		ReturnPath = "/admin/hotels/hotellist",
-		ReturnPathName = "Hotels List",
+		ReturnUrl = "/admin/hotels/hotellist",
+		ReturnText = "Hotels List",
 		KeyPropertyLabel = "Hotel Code",
 		KeyPropertyName = "HotelCode",
 		KeyPropertyValue = Model.HotelCode,
