--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RatePlanAdd.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RatePlanAdd.cshtml
@@ -9,8 +9,8 @@
     ViewBag.Success = new SuccessAlert
     {
 	    ModelName = "RoomRatePlan",
-	    ReturnPath = "/admin/hotels/RatePlanList?hotelCode=" + hotelCode,
-	    ReturnPathName = "Rate Plan List",
+	    ReturnUrl = "/admin/hotels/RatePlanList?hotelCode=" + hotelCode,
+	    ReturnText = "Rate Plan List",
 	    KeyPropertyLabel = "Rate Plan Code",
 	    KeyPropertyName = "RatePlanCode",
 	    KeyPropertyValue = Model.RatePlanCode,
