--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RoomTypeAdd.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RoomTypeAdd.cshtml
@@ -9,8 +9,8 @@
     ViewBag.Success = new SuccessAlert
     {
 	    ModelName = "RoomType",
-	    ReturnPath = "/admin/hotels/RoomTypeList?hotelCode=" + hotelCode,
-	    ReturnPathName = "Room Type List",
+	    ReturnUrl = "/admin/hotels/RoomTypeList?hotelCode=" + hotelCode,
+	    ReturnText = "Room Type List",
 	    KeyPropertyLabel = "Room Type Code",
 	    KeyPropertyName = "Code",
 	    KeyPropertyValue = Model.Code,
