--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialsList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialsList.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Msh.Admin.Models.Const
+@using Msh.WebApp.Areas.Admin.Models
 @using Msh.WebApp.Models.Admin.ViewModels
 @model Msh.WebApp.Models.Admin.ViewModels.SpecialsListVm;
 @{
@@ -28,15 +29,22 @@
 
 @await Html.PartialAsync("Hotels/_BulkCopyDelButtons", @Model.HotelCode)
 
+@* Include the Save/Return/Publish/Archive/Load/Lock/Info buttons *@
+@await Html.PartialAsync("_PublishArchiveLoadLock", new PublishArchiveLoadLockVm
+{
+	ReturnUrl = "/Admin/Hotels",
+	ReturnText = ConstReturnText.ReturnToDash,
+})
+
 @await Html.PartialAsync("Admin/_AdminErrorBlock", @Model.ErrorMessage)
 
-<div id="page-info" style="display:none;">
-	
+@section InfoItems {
+
 	<div data-info-for="info-specials">
 		<span>Specials List</span>
 		<div>
 			<p>The list shows the Specials for the selected hotel.</p>
-			
+
 			@await Html.PartialAsync("Hotels/_ListIconsInfo")
 			<p>Additional icons for this list:</p>
 			<ul>
@@ -44,9 +52,9 @@
 				<li><i class="fa-solid fa-calendar"></i> - Edit the dates list associated with the record.</li>
 			</ul>
 		</div>
-		
+
 	</div>
-</div>
+}
 
 @section Scripts{
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
