--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/TestModelAdd.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/TestModelAdd.cshtml
@@ -7,8 +7,8 @@
 	ViewBag.Success = new SuccessAlert
 	{
 		ModelName = "TestModel",
-		ReturnPath = "/admin/hotels/TestModelList",
-		ReturnPathName = "Test Model List",
+		ReturnUrl = "/admin/hotels/TestModelList",
+		ReturnText = "Test Model List",
 		KeyPropertyLabel = "Test Model",
 		KeyPropertyName = "Code",
 		KeyPropertyValue = Model.Code,
