--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_DiscountEditInfo.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_DiscountEditInfo.cshtml
@@ -1,9 +1,9 @@
 ﻿@* Info blocks for _HotelEdit.cshtml *@
 
 
-<div id="page-info" style="display:none;">
+@section InfoItems {
 
-	
+
 	<div data-info-for="info-discount-code">
 		<span>Discount Code</span>
 		<div>
@@ -149,8 +149,8 @@
 		</div>
 	</div>
 
-	
-	
+
+
 
 	<div data-info-for="info-notes">
 		<span>Notes</span>
@@ -160,4 +160,4 @@
 			</p>
 		</div>
 	</div>
-</div>
+}
