--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_ExtraEditInfo.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_ExtraEditInfo.cshtml
@@ -1,7 +1,7 @@
 ﻿@* Info blocks for _HotelEdit.cshtml *@
 
 
-<div id="page-info" style="display:none;">
+@section InfoItems {
 
 	<div data-info-for="info-code">
 		<span>Extra Code</span>
@@ -67,4 +67,4 @@
 			</p>
 		</div>
 	</div>
-</div>
+}
