--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_TestModelEditInfo.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_TestModelEditInfo.cshtml
@@ -2,7 +2,7 @@
 @* Info blocks for _TestModelEdit.cshtml *@
 
 
-<div id="page-info" style="display:none;">
+@section InfoItems {
 
 	<div data-info-for="info-code">
 		<span>Model Code</span>
@@ -46,4 +46,5 @@
 			</p>
 		</div>
 	</div>
-</div>
+
+}
