--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/CoinCorner/Global.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/CoinCorner/Global.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @using Msh.Admin.Models.Const
 @using Msh.Pay.CoinCorner.Models;
+@using Msh.WebApp.Areas.Admin.Models
 @using Msh.WebApp.TagHelpers
 
 @model CoinCornerGlobal;
@@ -18,35 +19,38 @@
 </div>
 
 <div class="row">
-	<div class="col-6">
+	<div class="col-12">
 
 		<form asp-action="Global">
 			
+			<div class="row">
+			<div class="col-md-6 col-12">
+
 			<div class="form-check form-switch mb-3">
-				<input asp-for="EnableLightning" type="checkbox" class="form-check-input" />
+				<input asp-for="EnableLightning" type="checkbox" class="form-check-input"/>
 				<label asp-for="EnableLightning" class="form-check-label">
-					Enable Lightning <info-icon name="info-enable-lightning" />
+					Enable Lightning <info-icon name="info-enable-lightning"/>
 				</label>
 			</div>
-			
+
 			<div class="form-check form-switch mb-3">
-				<input asp-for="EnableOnChain" type="checkbox" class="form-check-input" />
+				<input asp-for="EnableOnChain" type="checkbox" class="form-check-input"/>
 				<label asp-for="EnableOnChain" class="form-check-label">
-					Enable On Chain <info-icon name="info-enable-on-chain" />
+					Enable On Chain <info-icon name="info-enable-on-chain"/>
 				</label>
 			</div>
-			
+
 			<div class="form-check form-switch mb-3">
-				<input asp-for="EnableBedrooms" type="checkbox" class="form-check-input" />
+				<input asp-for="EnableBedrooms" type="checkbox" class="form-check-input"/>
 				<label asp-for="EnableBedrooms" class="form-check-label">
-					Enable Bedrooms <info-icon name="info-enable-bedrooms" />
+					Enable Bedrooms <info-icon name="info-enable-bedrooms"/>
 				</label>
 			</div>
-			
+
 			<div class="form-check form-switch mb-3">
-				<input asp-for="EnableActivities" type="checkbox" class="form-check-input" />
+				<input asp-for="EnableActivities" type="checkbox" class="form-check-input"/>
 				<label asp-for="EnableActivities" class="form-check-label">
-					Enable Activities <info-icon name="info-enable-activities" />
+					Enable Activities <info-icon name="info-enable-activities"/>
 				</label>
 			</div>
 
@@ -57,94 +61,98 @@
 			</div>
 
 			<div class="form-group mb-3">
-				<label asp-for="RetryInterval" class="control-label">Retry Interval <info-icon name="info-retry-interval" /></label>
-				<input asp-for="RetryInterval" class="form-control" />
+				<label asp-for="RetryInterval" class="control-label">Retry Interval <info-icon name="info-retry-interval"/></label>
+				<input asp-for="RetryInterval" class="form-control"/>
 				<span asp-validation-for="RetryInterval" class="text-danger"></span>
 			</div>
 
 			<div class="form-group mb-3">
-				<label asp-for="SettleCurrency" class="control-label">Settle Currency <info-icon name="info-settle-currency" /></label>
-				<input asp-for="SettleCurrency" class="form-control" />
+				<label asp-for="SettleCurrency" class="control-label">Settle Currency <info-icon name="info-settle-currency"/></label>
+				<input asp-for="SettleCurrency" class="form-control"/>
 				<span asp-validation-for="SettleCurrency" class="text-danger"></span>
 			</div>
-			
+
 			<div class="form-group mb-3">
-				<label asp-for="InvoiceCurrency" class="control-label">Invoice Currency <info-icon name="info-invoice-currency" /></label>
-				<input asp-for="InvoiceCurrency" class="form-control" />
+				<label asp-for="InvoiceCurrency" class="control-label">Invoice Currency <info-icon name="info-invoice-currency"/></label>
+				<input asp-for="InvoiceCurrency" class="form-control"/>
 				<span asp-validation-for="InvoiceCurrency" class="text-danger"></span>
 			</div>
 
-			
+
 			<div class="form-group mb-3">
-				<label asp-for="LightningLimit" class="control-label">Lightning Limit <info-icon name="info-lightning-limit" /></label>
-				<input asp-for="LightningLimit" class="form-control" />
+				<label asp-for="LightningLimit" class="control-label">Lightning Limit <info-icon name="info-lightning-limit"/></label>
+				<input asp-for="LightningLimit" class="form-control"/>
 				<span asp-validation-for="LightningLimit" class="text-danger"></span>
 			</div>
-			
-			
-			
+
+
+
 			<div class="form-group mb-3">
-				<label asp-for="LightningLimitMessage" class="control-label">Lightning Limit Message <info-icon name="info-lightning-limit-message" /></label>
-				<input asp-for="LightningLimitMessage" class="form-control" />
+				<label asp-for="LightningLimitMessage" class="control-label">Lightning Limit Message <info-icon name="info-lightning-limit-message"/></label>
+				<input asp-for="LightningLimitMessage" class="form-control"/>
 				<span asp-validation-for="LightningLimitMessage" class="text-danger"></span>
 			</div>
-			
+
 			<div class="form-group mb-3">
-				<label asp-for="NotAvailableMessage" class="control-label">Not Available Message <info-icon name="info-not-available-message" /></label>
-				<input asp-for="NotAvailableMessage" class="form-control" />
+				<label asp-for="NotAvailableMessage" class="control-label">Not Available Message <info-icon name="info-not-available-message"/></label>
+				<input asp-for="NotAvailableMessage" class="form-control"/>
 				<span asp-validation-for="NotAvailableMessage" class="text-danger"></span>
 			</div>
-			
+
 			<div class="form-group mb-3">
-				<label asp-for="NotAvailableBookingsMessage" class="control-label">Not Available Bookings Message <info-icon name="info-not-available-message" /></label>
-				<input asp-for="NotAvailableBookingsMessage" class="form-control" />
+				<label asp-for="NotAvailableBookingsMessage" class="control-label">Not Available Bookings Message <info-icon name="info-not-available-message"/></label>
+				<input asp-for="NotAvailableBookingsMessage" class="form-control"/>
 				<span asp-validation-for="NotAvailableBookingsMessage" class="text-danger"></span>
 			</div>
-			
+
 			<div class="form-group mb-3">
-				<label asp-for="NotAvailableActivitiesMessage" class="control-label">Not Available Activities Message <info-icon name="info-not-available-message" /></label>
-				<input asp-for="NotAvailableActivitiesMessage" class="form-control" />
+				<label asp-for="NotAvailableActivitiesMessage" class="control-label">Not Available Activities Message <info-icon name="info-not-available-message"/></label>
+				<input asp-for="NotAvailableActivitiesMessage" class="form-control"/>
 				<span asp-validation-for="NotAvailableActivitiesMessage" class="text-danger"></span>
 			</div>
-			
+
 			<div class="form-group mb-3">
-				<label asp-for="OnChainPendingWait" class="control-label">On Chain Pending Wait (Seconds) <info-icon name="info-on-chain-pending-wait" /></label>
-				<input asp-for="OnChainPendingWait" class="form-control" />
+				<label asp-for="OnChainPendingWait" class="control-label">On Chain Pending Wait (Seconds) <info-icon name="info-on-chain-pending-wait"/></label>
+				<input asp-for="OnChainPendingWait" class="form-control"/>
 				<span asp-validation-for="OnChainPendingWait" class="text-danger"></span>
 			</div>
-			
+
 			<div class="form-group mb-3">
-				<label asp-for="OnChainInitialPrompt" class="control-label">On Chain Initial Prompt <info-icon name="info-on-chain-initial-prompt" /></label>
-				<input asp-for="OnChainInitialPrompt" class="form-control" />
+				<label asp-for="OnChainInitialPrompt" class="control-label">On Chain Initial Prompt <info-icon name="info-on-chain-initial-prompt"/></label>
+				<input asp-for="OnChainInitialPrompt" class="form-control"/>
 				<span asp-validation-for="OnChainInitialPrompt" class="text-danger"></span>
 			</div>
-			
+
 			<div class="form-group mb-3">
-				<label asp-for="StopWaitingPrompt" class="control-label">Stop Waiting Prompt <info-icon name="info-stop-waiting-prompt" /></label>
-				<input asp-for="StopWaitingPrompt" class="form-control" />
+				<label asp-for="StopWaitingPrompt" class="control-label">Stop Waiting Prompt <info-icon name="info-stop-waiting-prompt"/></label>
+				<input asp-for="StopWaitingPrompt" class="form-control"/>
 				<span asp-validation-for="StopWaitingPrompt" class="text-danger"></span>
 			</div>
-			
+
 			<div class="form-check form-switch mb-3">
-				<input asp-for="OnePencePayment" type="checkbox" class="form-check-input" />
+				<input asp-for="OnePencePayment" type="checkbox" class="form-check-input"/>
 				<label asp-for="OnePencePayment" class="form-check-label">
-					One Pence Payment <info-icon name="info-one-pence-payment" />
+					One Pence Payment <info-icon name="info-one-pence-payment"/>
 				</label>
 			</div>
+			
+			</div> @* End Column *@
+			</div> @* End Row *@
+			
+			@* Include the Save/Return/Publish/Archive/Load/Lock/Info buttons *@
+			@await Html.PartialAsync("_PublishArchiveLoadLock", new PublishArchiveLoadLockVm
+			{
+				ReturnUrl = "/Admin/CoinCorner/",
+				ReturnText = ConstReturnText.ReturnToDash,
+				SaveOperation = "submit"
+			})
 
-			<div class="input-group">
-				<button type="submit" name="Command" value="Save" class="btn btn-outline-primary">Save</button>
-				<input type="button" value="Cancel" class="btn btn-outline-secondary"/>
-
-				<button type="submit" name="Command" value="Publish" id="publish-button" class="btn btn-outline-success">Publish <info-icon name="info-publish"/></button>
-
-			</div>
 		</form>
 
 	</div>
 </div>
 
-<div id="page-info" style="display:none;">
+@section InfoItems {
 
 	<div data-info-for="info-enable-lightning">
 		<span>Enable Lightning</span>
@@ -154,7 +162,7 @@
 			</p>
 		</div>
 	</div>
-	
+
 	<div data-info-for="info-enable-on-chain">
 		<span>Public Key</span>
 		<div>
@@ -166,7 +174,7 @@
 			</p>
 		</div>
 	</div>
-	
+
 	<div data-info-for="info-enable-bedrooms">
 		<span>Enable Bedrooms</span>
 		<div>
@@ -175,7 +183,7 @@
 			</p>
 		</div>
 	</div>
-	
+
 	<div data-info-for="info-enable-activities">
 		<span>Enable Activities</span>
 		<div>
@@ -184,7 +192,7 @@
 			</p>
 		</div>
 	</div>
-	
+
 	<div data-info-for="info-retries">
 		<span>Retries</span>
 		<div>
@@ -193,7 +201,7 @@
 			</p>
 		</div>
 	</div>
-	
+
 	<div data-info-for="info-retry-interval">
 		<span>Retry Interval</span>
 		<div>
@@ -202,7 +210,7 @@
 			</p>
 		</div>
 	</div>
-	
+
 	<div data-info-for="info-settle-currency">
 		<span>Settle Currency</span>
 		<div>
@@ -211,7 +219,7 @@
 			</p>
 		</div>
 	</div>
-	
+
 	<div data-info-for="info-invoice-currrency">
 		<span>Invoice Currency Code</span>
 		<div>
@@ -220,7 +228,7 @@
 			</p>
 		</div>
 	</div>
-	
+
 	<div data-info-for="info-lightning-limit">
 		<span>Lightning Limit</span>
 		<div>
@@ -228,12 +236,12 @@
 				Enter the maximum amount that should be used for Lightning payments.
 			</p>
 			<p>
-				This is an advisory amount in the application. Coin Corner will perform on-chain payments above a limit they specify. 
+				This is an advisory amount in the application. Coin Corner will perform on-chain payments above a limit they specify.
 				That's the amount that should be entered here.
 			</p>
 		</div>
 	</div>
-	
+
 	<div data-info-for="info-lightning-limit-message">
 		<span>Lightning Limit Message</span>
 		<div>
@@ -242,7 +250,7 @@
 			</p>
 		</div>
 	</div>
-	
+
 	<div data-info-for="info-not-available-message">
 		<span>Not Available Message</span>
 		<div>
@@ -250,7 +258,7 @@
 			</p>
 		</div>
 	</div>
-	
+
 	<div data-info-for="info-on-chain-pending-wait">
 		<span>On-Chain Pending Wait</span>
 		<div>
@@ -259,7 +267,7 @@
 			</p>
 		</div>
 	</div>
-	
+
 	<div data-info-for="info-on-chain-initial-prompt">
 		<span>On-Chain Initial Prompt</span>
 		<div>
@@ -268,7 +276,7 @@
 			</p>
 		</div>
 	</div>
-	
+
 	<div data-info-for="info-stop-waiting-prompt">
 		<span>On-Chain Stop Waiting Prompt</span>
 		<div>
@@ -277,7 +285,7 @@
 			</p>
 		</div>
 	</div>
-	
+
 	<div data-info-for="info-one-pence-payment">
 		<span>One Pence Payment</span>
 		<div>
@@ -286,12 +294,8 @@
 			</p>
 		</div>
 	</div>
-	
-	@{
-		await Html.RenderPartialAsync("Admin/_AdminPublish", "Coin Corner Global");
-	}
-	
-</div>
+
+}
 
 @section Scripts {
 	<script src="~/js/mshapp/msh-apiservice.js"></script>
