--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditDatesBook.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditDatesBook.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Msh.Admin.Models.Const
+@using Msh.WebApp.Areas.Admin.Models
+@using Msh.WebApp.TagHelpers
 @{
 	var title = "Discount Book Dates List";
 	ViewData["Title"] = title;
@@ -23,15 +25,16 @@
 	</div>
 </div>
 
-<div class="mt-3" style="display:flex;justify-content:start;">
-	<div class="input-group">
-		<button id="save-dates" class="btn btn-outline-primary" class="mr-3">Save</button>
-		<a asp-contoller="Hotels" asp-action="DiscountsList" asp-route-hotelCode="@hotelCode" asp-route-code="@itemCode" class="btn btn-outline-secondary">Return to list</a>
-	</div>
-		
-</div>
+@await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
+{
+	ReturnUrl = $"/Admin/Hotels/DiscountList?hotelCode={@hotelCode}&code={@itemCode}",
+	ReturnText = ConstReturnText.ReturnToDash,
+	SaveOperation = "#save-dates"
+})
 
-<div id="page-info" style="display:none;">
+
+@section InfoItems {
+
 	<div data-info-for="info-discount-dates">
 		<span>Discounts Book Dates</span>
 		<div>
@@ -39,13 +42,11 @@
 			<p>Prohibit date ranges might be used for times you want to prevent users using the discount - perhaps when a discount won't be active for a while.</p>
 			<p>Allow date ranges might be used for times when you want to make booking a discount available during a short period, such as promotion.</p>
 			<p>If no dates are supplied the discount can be booked any time, though that may also be determined by Opera for some discount types.</p>
-			<p>Editing the date list: <info-icon name="info-date-range-list" /></p>
+			<p>Editing the date list: <info-icon name="info-date-range-list"/></p>
 		</div>
 	</div>
 
-	@await Html.PartialAsync("Admin/_AdminDatesList")
-
-</div>
+}
 
 @section Scripts {
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
