--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditDatesOffer.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditDatesOffer.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Msh.Admin.Models.Const
+@using Msh.WebApp.Areas.Admin.Models
 @{
 	var title = "Discount Offer Dates List";
 	ViewData["Title"] = title;
@@ -23,6 +24,15 @@
 	</div>
 </div>
 
+
+@await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
+{
+	ReturnUrl = $"/Admin/Hotels/DiscountList?hotelCode={@hotelCode}&code={@itemCode}",
+	ReturnText = ConstReturnText.ReturnToDash,
+	SaveOperation = "#save-dates"
+})
+
+
 <div class="mt-3" style="display:flex;justify-content:start;">
 	<div class="input-group">
 		<button id="save-dates" class="btn btn-outline-primary" class="mr-3">Save</button>
@@ -31,7 +41,8 @@
 		
 </div>
 
-<div id="page-info" style="display:none;">
+@section InfoItems {
+
 	<div data-info-for="info-discount-dates">
 		<span>Discounts Offer Dates</span>
 		<div>
@@ -39,13 +50,11 @@
 			<p>Prohibit date ranges might be used for discounts that are generally available but occasionally are not.</p>
 			<p>Allow date ranges might be used for discounts that are seasonal and available for a short time.</p>
 			<p>If no dates are supplied the discount will be available all the time, though that may also be determined by Opera for some discount types.</p>
-			<p>Editing the date list: <info-icon name="info-date-range-list" /></p>
+			<p>Editing the date list: <info-icon name="info-date-range-list"/></p>
 		</div>
 	</div>
-	
-	@await Html.PartialAsync("Admin/_AdminDatesList")
 
-</div>
+}
 
 @section Scripts {
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
