--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditRatePlansDisable.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditRatePlansDisable.cshtml
@@ -1,4 +1,7 @@
-﻿@model Msh.WebApp.Models.Admin.ViewModels.CodeCheckListVm
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Msh.WebApp.Areas.Admin.Models
+@using Msh.WebApp.TagHelpers
+@model Msh.WebApp.Models.Admin.ViewModels.CodeCheckListVm
 @{
 	var title = "Disabled Rate Plans";
 	ViewData["Title"] = title;
@@ -24,15 +27,17 @@
 	</div>
 </div>
 
-<div class="mt-3" style="display:flex;justify-content:start;">
-	<div class="input-group">
-		<button id="save-button" class="btn btn-outline-primary" onclick="window.mshMethods.saveCodeCheckList()" class="mr-3">Save</button>
-		<a asp-contoller="Hotels" asp-action="DiscountsList" asp-route-hotelCode="@hotelCode" asp-route-code="@itemCode" class="btn btn-outline-secondary">Return to list</a>
-	</div>
-		
-</div>
 
-<div id="page-info" style="display:none;">
+@await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
+{
+	ReturnUrl = $"/Admin/Hotels/DiscountList?hotelCode={@hotelCode}&code={@itemCode}",
+	ReturnText = ConstReturnText.ReturnToList,
+	SaveOperation = "#save-button"
+})
+
+
+@section InfoItems {
+
 	<div data-info-for="info-special-rate-plans">
 		<span>Disabled Rate Plans</span>
 		<div>
@@ -43,7 +48,7 @@
 			<p>If no rate plans are added, the discount is available with all rate plans.</p>
 		</div>
 	</div>
-</div>
+}
 
 @section Scripts {
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
