--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtraEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtraEdit.cshtml
@@ -9,8 +9,8 @@
 	ViewBag.Success = new SuccessAlert
 	{
 		ModelName = "Extra",
-		ReturnPath = "/admin/hotels/ExtrasList?hotelCode=" + hotelCode,
-		ReturnPathName = "Extras List",
+		ReturnUrl = "/admin/hotels/ExtrasList?hotelCode=" + hotelCode,
+		ReturnText = "Extras List",
 		KeyPropertyLabel = "Extra Code",
 		KeyPropertyName = "Code",
 		KeyPropertyValue = Model.Code,
