--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtraEditDates.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtraEditDates.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Msh.Admin.Models.Const
+@using Msh.WebApp.Areas.Admin.Models
 @{
 	var title = "Extra Dates List";
 	ViewData["Title"] = title;
@@ -23,15 +24,17 @@
 	</div>
 </div>
 
-<div class="mt-3" style="display:flex;justify-content:start;">
-	<div class="input-group">
-		<button id="save-dates" class="btn btn-outline-primary" class="mr-3">Save</button>
-		<a asp-contoller="Hotels" asp-action="ExtrasList" asp-route-hotelCode="@hotelCode" asp-route-code="@itemCode" class="btn btn-outline-secondary">Return to list</a>
-	</div>
-		
-</div>
 
-<div id="page-info" style="display:none;">
+@await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
+{
+	ReturnUrl = "/Admin/Hotels/ExtrasList?hotelCode={hotelCode}&code={itemCode}",
+	ReturnText = ConstReturnText.ReturnToList,
+	SaveOperation = "#save-dates"
+})
+
+
+@section InfoItems {
+
 	<div data-info-for="info-extra-dates">
 		<span>Extra Dates</span>
 		<div>
@@ -42,9 +45,9 @@
 			<p>Editing the date list: <info-icon name="info-date-range-list"/></p>
 		</div>
 	</div>
-	
+
 	@await Html.PartialAsync("Admin/_AdminDatesList")
-</div>
+}
 
 @section Scripts {
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
