--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelBookEditDates.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelBookEditDates.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Msh.Admin.Models.Const
+@using Msh.WebApp.Areas.Admin.Models
 @{
 	var title = "Hotel Book Dates List";
 	ViewData["Title"] = title;
@@ -22,24 +23,25 @@
 	</div>
 </div>
 
-<div class="mt-3" style="display:flex;justify-content:start;">
-	<div class="input-group">
-		<button id="save-dates" class="btn btn-outline-primary" class="mr-3">Save</button>
-		<a asp-contoller="Hotels" asp-action="HotelList" class="btn btn-outline-secondary">Return to list</a>
-	</div>
-</div>
+@await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
+{
+	ReturnUrl = "/Admin/Hotels/",
+	ReturnText = ConstReturnText.ReturnToList,
+	SaveOperation = "#save-dates"
+})
 
-<div id="page-info" style="display:none;">
+@section InfoItems {
+
 	<div data-info-for="info-hotel-dates">
 		<span>Hotel Dates</span>
 		<div>
 			<p>
-				Add dates when the hotel is unavailable (Stay From - Stay To). 
+				Add dates when the hotel is unavailable (Stay From - Stay To).
 				Set the Enabled flag to enable the dates to be used, i.e., to disable the hotel for those dates.
 			</p>
 			<p>
-				Add dates when the user cannot make bookings for the hotel (Book From - Book To). 
-				Set the Enabled flag to enable the dates to be used, i.e., 
+				Add dates when the user cannot make bookings for the hotel (Book From - Book To).
+				Set the Enabled flag to enable the dates to be used, i.e.,
 				to prevent users making bookings for the hotel on those dates.
 			</p>
 			<p>
@@ -47,7 +49,7 @@
 			</p>
 		</div>
 	</div>
-</div>
+}
 
 @section Scripts {
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
