--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialEdit.cshtml
@@ -9,8 +9,8 @@
 	ViewBag.Success = new SuccessAlert
 	{
 		ModelName = "Special",
-		ReturnPath = "/admin/hotels/SpecialsList?hotelCode=" + hotelCode,
-		ReturnPathName = "Specials List",
+		ReturnUrl = "/admin/hotels/SpecialsList?hotelCode=" + hotelCode,
+		ReturnText = "Specials List",
 		KeyPropertyLabel = "Special Code",
 		KeyPropertyName = "Code",
 		KeyPropertyValue = Model.Code,
