--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialEditDates.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialEditDates.cshtml
@@ -1,4 +1,7 @@
-﻿@using Msh.Admin.Models.Const
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Msh.Admin.Models.Const
+@using Msh.WebApp.Areas.Admin.Models
+@using Msh.WebApp.TagHelpers
 @{
 	var title = "Special Dates List";
 	ViewData["Title"] = title;
@@ -23,22 +26,23 @@
 	</div>
 </div>
 
-<div class="mt-3" style="display:flex;justify-content:start;">
-	<div class="input-group">
-		<button id="save-dates" class="btn btn-outline-primary" class="mr-3">Save</button>
-		<a asp-contoller="Hotels" asp-action="SpecialsList" asp-route-hotelCode="@hotelCode" asp-route-code="@itemCode" class="btn btn-outline-secondary">Return to list</a>
-	</div>
-		
-</div>
 
-<div id="page-info" style="display:none;">
+@await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
+{
+	ReturnUrl = $"/Admin/Hotels/SpecialsList?hotelCode={hotelCode}&code={itemCode}",
+	ReturnText = ConstReturnText.ReturnToDash,
+	SaveOperation = "#save-dates"
+})
+
+
+@section InfoItems {
 	<div data-info-for="info-special-dates">
 		<span>Special Dates</span>
 		<div>
-			
+
 		</div>
 	</div>
-</div>
+}
 
 @section Scripts {
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
