--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialEditOptions.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialEditOptions.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Msh.Admin.Models.Const
+@using Msh.WebApp.Areas.Admin.Models
 @{
 	var title = "Special Options List";
 	ViewData["Title"] = title;
@@ -23,22 +24,23 @@
 	</div>
 </div>
 
-<div class="mt-3" style="display:flex;justify-content:start;">
-	<div class="input-group">
-		<button id="save-options" class="btn btn-outline-primary" class="mr-3">Save</button>
-		<a asp-contoller="Hotels" asp-action="SpecialsList" asp-route-hotelCode="@hotelCode" asp-route-code="@itemCode" class="btn btn-outline-secondary">Return to list</a>
-	</div>
-		
-</div>
+@await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
+{
+	ReturnUrl = $"/Admin/Hotels/SpecialsList?hotelCode={hotelCode}&code={itemCode}",
+	ReturnText = ConstReturnText.ReturnToList,
+	SaveOperation = "#save-options"
+})
 
-<div id="page-info" style="display:none;">
+
+@section InfoItems {
+
 	<div data-info-for="info-special-options">
 		<span>Special Options</span>
 		<div>
-			
+
 		</div>
 	</div>
-</div>
+}
 
 @section Scripts {
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
