--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialEditRatePlans.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialEditRatePlans.cshtml
@@ -1,4 +1,5 @@
-﻿@model Msh.WebApp.Models.Admin.ViewModels.CodeCheckListVm
+﻿@using Msh.WebApp.Areas.Admin.Models
+@model Msh.WebApp.Models.Admin.ViewModels.CodeCheckListVm
 @{
 	var title = "Disabled Rate Plans";
 	ViewData["Title"] = title;
@@ -24,15 +25,17 @@
 	</div>
 </div>
 
-<div class="mt-3" style="display:flex;justify-content:start;">
-	<div class="input-group">
-		<button id="save-button" class="btn btn-outline-primary" onclick="window.mshMethods.saveCodeCheckList()" class="mr-3">Save</button>
-		<a asp-contoller="Hotels" asp-action="SpecialsList" asp-route-hotelCode="@hotelCode" asp-route-code="@itemCode" class="btn btn-outline-secondary">Return to list</a>
-	</div>
-		
-</div>
 
-<div id="page-info" style="display:none;">
+@await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
+{
+	ReturnUrl = $"/Admin/Hotels/SpecialsList?hotelCode={hotelCode}&code={itemCode}",
+	ReturnText = ConstReturnText.ReturnToList,
+	SaveOperation = "window.mshMethods.saveCodeCheckList()"
+})
+
+
+@section InfoItems {
+
 	<div data-info-for="info-special-rate-plans">
 		<span>Disabled Room Types</span>
 		<div>
@@ -41,7 +44,7 @@
 			</p>
 		</div>
 	</div>
-</div>
+}
 
 @section Scripts {
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
