--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialEditRoomTypes.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialEditRoomTypes.cshtml
@@ -1,4 +1,5 @@
-﻿@model Msh.WebApp.Models.Admin.ViewModels.CodeCheckListVm
+﻿@using Msh.WebApp.Areas.Admin.Models
+@model Msh.WebApp.Models.Admin.ViewModels.CodeCheckListVm
 @{
 	var title = "Disabled Room Types";
 	ViewData["Title"] = title;
@@ -25,6 +26,15 @@
 	</div>
 </div>
 
+
+@await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
+{
+	ReturnUrl = $"/Admin/Hotels/SpecialsList?hotelCode={hotelCode}&code={itemCode}",
+	ReturnText = ConstReturnText.ReturnToList,
+	SaveOperation = "window.mshMethods.saveCodeCheckList()"
+})
+
+
 <div class="mt-3" style="display:flex;justify-content:start;">
 	<div class="input-group">
 		<button id="save-button" class="btn btn-outline-primary" onclick="window.mshMethods.saveCodeCheckList()" class="mr-3">Save</button>
@@ -33,7 +43,8 @@
 		
 </div>
 
-<div id="page-info" style="display:none;">
+@section InfoItems {
+
 	<div data-info-for="info-special-room-types">
 		<span>Disabled Room Types</span>
 		<div>
@@ -42,7 +53,7 @@
 			</p>
 		</div>
 	</div>
-</div>
+}
 
 @section Scripts {
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
