--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Loggers/LogXmlConfigEditItems.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Loggers/LogXmlConfigEditItems.cshtml
@@ -1,4 +1,7 @@
-﻿@using Msh.WebApp.Models.Admin
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Msh.WebApp.Areas.Admin.Models
+@using Msh.WebApp.Models.Admin
+@using Msh.WebApp.TagHelpers
 
 @model Msh.Loggers.XmlLogger.LogXmlConfig;
 @{
@@ -10,8 +13,8 @@
 	ViewBag.Success = new SuccessAlert
 	{
 		ModelName = "LogXmlConfig",
-		ReturnPath = "/admin/loggers",
-		ReturnPathName = "Loggers Dashboard",
+		ReturnUrl = "/admin/loggers",
+		ReturnText = "Loggers Dashboard",
 		KeyPropertyLabel = title,
 		KeyPropertyName = "Group",
 		KeyPropertyValue = group,
@@ -33,29 +36,33 @@
 	</div>
 </div>
 
-<div class="input-group mt-3 sticky-bottom">
-	<button id="save-logxmlconfig-items" class="btn btn-outline-primary" class="mr-3">Save</button>
-	<a href="javascript:mshMethods.presetItems()" class="btn btn-outline-secondary">Preset Items</a>
-	<a asp-contoller="Loggers" asp-action="Index" class="btn btn-outline-secondary">Return to dashboard</a>
-</div>
+@* Include the Save/Return/Publish/Archive/Load/Lock/Info buttons *@
+@await Html.PartialAsync("_PublishArchiveLoadLock", new PublishArchiveLoadLockVm
+{
+	ReturnUrl = "Admin/Loggers",
+	ReturnText = ConstReturnText.ReturnToDash,
+	SaveOperation = "window.mshMethods.saveData()"
+})
 
-<div id="page-info" style="display:none;">
 
-<div data-info-for="info-log-xml-items">
-	<span>Log XML Items for @group</span>
+@section InfoItems {
+
+	<div data-info-for="info-log-xml-items">
+		<span>Log XML Items for @group</span>
 		<div>
 			<p>
 				For XML APIs such as Opera's OWS SOAP interface, request and response may be logged.
-				This list of key values, and the Enabled flag, determine which calls can be logged.
-				Note that for many items there are options to log the request and/or the response. 
-				Records will be logged only if the item is enabled.
+				This list of key values determine which calls can be logged.
+			</p>
+			<p>
+				For many items there are options to log the request and/or the response.
 			</p>
 			<p>
 				Some calls cannot be logged - those relating to security requests to opera, such as passwords, logins.
 			</p>
 			<p>
-				You could add the keys manually, but they have specific values in the code, so the best options is the 
-				preset the values using the Preset button.
+				You could add the keys manually, but they have specific values in the code, so the best option is
+				to preset the values, by using the Preset button.
 			</p>
 			<p>
 				Records will be logged only if the item is enabled.
@@ -65,8 +72,8 @@
 			</p>
 		</div>
 	</div>
-</div>
 
+}
 @section Scripts {
 	<script src="~/js/mshapp/msh-apiservice.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
