--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Ows/OwsConfigEditTriggers.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Ows/OwsConfigEditTriggers.cshtml
@@ -1,4 +1,5 @@
-﻿@using Msh.WebApp.Models.Admin
+﻿@using Msh.WebApp.Areas.Admin.Models
+@using Msh.WebApp.Models.Admin
 
 @model Msh.Opera.Ows.Models.OwsConfig;
 @{
@@ -8,8 +9,8 @@
 	ViewBag.Success = new SuccessAlert
 	{
 		ModelName = "CriticalErrorTrigger",
-		ReturnPath = "/admin/ows",
-		ReturnPathName = "OWS Dashboard",
+		ReturnUrl = "/admin/ows",
+		ReturnText = "OWS Dashboard",
 		KeyPropertyLabel = title,
 		KeyPropertyName = "Code",
 		KeyPropertyValue = "",
@@ -31,13 +32,12 @@
 	</div>
 </div>
 
-<div class="mt-3" style="display:flex;justify-content:start;">
-	<div class="input-group">
-		<button id="save-owsconfig-maps" class="btn btn-outline-primary" class="mr-3">Save</button>
-		<a asp-contoller="Ows" asp-action="Index"  class="btn btn-outline-secondary">Return to dashboard</a>
-	</div>
-
-</div>
+@await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
+{
+	ReturnUrl = "/Admin/Ows/",
+	ReturnText = ConstReturnText.ReturnToDash,
+	SaveOperation = "#save-ows-config-triggers"
+})
 
 
 @section Scripts {
