--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_ExtraEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_ExtraEdit.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Msh.WebApp.Areas.Admin.Models
 @using Msh.WebApp.Models.Admin
 @using Msh.WebApp.TagHelpers
 @model Msh.HotelCache.Models.Extras.Extra;
@@ -18,72 +19,80 @@
 @await Html.PartialAsync("Admin/_AdminSaveSuccess", success)
 
 <div class="row">
-	<div class="col-6">
+	<div class="col-12">
 
 		<form asp-action="@formAction" asp-route-hotelCode="@hotelCode" id="main-form">
 
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-			<div class="form-group mb-3">
-				<label asp-for="Code" class="control-label"></label>&nbsp;
-				<info-icon name="info-code" />
-				@await Html.PartialAsync("Hotels/_EditCode", success)
-			</div>
 			
-			<div class="form-group mb-3">
-				<input asp-for="Enabled" type="checkbox" class="form-check-input " />
-				<label asp-for="Enabled" class="form-check-label"></label>&nbsp;
-				<info-icon name="info-enabled" />
-			</div>
+			<div class="row">
+				<div class="col-md-6 col-12">
 
-			<div class="form-group mb-3">
-				<label asp-for="Description" class="control-label"></label>&nbsp;
-				<info-icon name="info-description"/>
-				<input asp-for="Description" class="form-control" />
-				<span asp-validation-for="Description" class="text-danger"></span>
-			</div>
-
-			<div class="form-group mb-3">
-				<label asp-for="Price" class="control-label"></label>&nbsp;
-				<info-icon name="info-price"/>
-				<input asp-for="Price" class="form-control"/>
-				<span asp-validation-for="Price" class="text-danger"></span>
-			</div>
+					<div class="form-group mb-3">
+						<label asp-for="Code" class="control-label"></label>&nbsp;
+						<info-icon name="info-code" />
+						@await Html.PartialAsync("Hotels/_EditCode", success)
+					</div>
 			
-			<div class="form-group mb-3">
-				<label asp-for="DisplayText" class="control-label"></label>&nbsp;
-				<info-icon name="info-display-text" />
-				<input asp-for="DisplayText" class="form-control" />
-				<span asp-validation-for="DisplayText" class="text-danger"></span>
-			</div>
+					<div class="form-group mb-3">
+						<input asp-for="Enabled" type="checkbox" class="form-check-input " />
+						<label asp-for="Enabled" class="form-check-label"></label>&nbsp;
+						<info-icon name="info-enabled" />
+					</div>
+
+					<div class="form-group mb-3">
+						<label asp-for="Description" class="control-label"></label>&nbsp;
+						<info-icon name="info-description"/>
+						<input asp-for="Description" class="form-control" />
+						<span asp-validation-for="Description" class="text-danger"></span>
+					</div>
+
+					<div class="form-group mb-3">
+						<label asp-for="Price" class="control-label"></label>&nbsp;
+						<info-icon name="info-price"/>
+						<input asp-for="Price" class="form-control"/>
+						<span asp-validation-for="Price" class="text-danger"></span>
+					</div>
+			
+					<div class="form-group mb-3">
+						<label asp-for="DisplayText" class="control-label"></label>&nbsp;
+						<info-icon name="info-display-text" />
+						<input asp-for="DisplayText" class="form-control" />
+						<span asp-validation-for="DisplayText" class="text-danger"></span>
+					</div>
 
 
-			<div class="form-group mb-3">
-				<input asp-for="Updated" type="checkbox" class="form-check-input " />
-				<label asp-for="Updated" class="form-check-label"></label>&nbsp;
-				<info-icon name="info-updated" />
-			</div>
+					<div class="form-group mb-3">
+						<input asp-for="Updated" type="checkbox" class="form-check-input " />
+						<label asp-for="Updated" class="form-check-label"></label>&nbsp;
+						<info-icon name="info-updated" />
+					</div>
 
 			
 			
-			<div class="form-group mb-3">
-				<input asp-for="EnabledAll" type="checkbox" class="form-check-input " />
-				<label asp-for="EnabledAll" class="form-check-label"></label>&nbsp;
-				<info-icon name="info-enabled-all" />
-			</div>
+					<div class="form-group mb-3">
+						<input asp-for="EnabledAll" type="checkbox" class="form-check-input " />
+						<label asp-for="EnabledAll" class="form-check-label"></label>&nbsp;
+						<info-icon name="info-enabled-all" />
+					</div>
 
 
-			<div class="form-group mb-3">
-				<label asp-for="Notes" class="control-label"></label>&nbsp;
-				<info-icon name="info-notes"/>
-				<textarea asp-for="Notes" class="form-control"></textarea>
-				<span asp-validation-for="Notes" class="text-danger"></span>
-			</div>
+					<div class="form-group mb-3">
+						<label asp-for="Notes" class="control-label"></label>&nbsp;
+						<info-icon name="info-notes"/>
+						<textarea asp-for="Notes" class="form-control"></textarea>
+						<span asp-validation-for="Notes" class="text-danger"></span>
+					</div>
 			
-			<div class="input-group sticky-bottom">
-				<button type="submit" name="Command" value="Save" class="btn btn-outline-primary">Save</button>
-				<a asp-controller="Hotels" asp-action="ExtrasList" asp-route-hotelCode="@hotelCode" class="btn btn-outline-secondary">Return to list</a>
+				</div>
 			</div>
+
+			@await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
+			{
+				ReturnUrl = "/Admin/Hotels/ExtrasList",
+				ReturnText = ConstReturnText.ReturnToList,
+				SaveOperation = "submit"
+			})
 
 		</form>
 
