--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_HotelEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_HotelEdit.cshtml
@@ -1,4 +1,7 @@
-﻿@using Msh.WebApp.Models.Admin
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Msh.WebApp.Areas.Admin.Models
+@using Msh.WebApp.Models.Admin
+@using Msh.WebApp.TagHelpers
 @model Msh.HotelCache.Models.Hotels.HotelBase;
 @{
 	var success = ViewBag.Success as SuccessAlert;
@@ -15,108 +18,116 @@
 @await Html.PartialAsync("Admin/_AdminSaveSuccess", success)
 
 <div class="row">
-	<div class="col-6">
+	<div class="col-12">
 
 		<form asp-action="@formAction" id="main-form">
+			
+			<div class="row">
+				<div class="col-md-6 col-12">
 
-			<div class="form-group mb-3">
-				<label asp-for="HotelCode" class="control-label">Hotel Code <info-icon name="info-hotel-code" /></label>
-				@await Html.PartialAsync("Hotels/_EditCode", success)
-			</div>
+					<div class="form-group mb-3">
+						<label asp-for="HotelCode" class="control-label">Hotel Code <info-icon name="info-hotel-code" /></label>
+						@await Html.PartialAsync("Hotels/_EditCode", success)
+					</div>
 
-			<div class="form-group mb-3">
-				<label asp-for="ChainCode" class="control-label">Chain Code <info-icon name="info-chain-code" /></label>
-				<input asp-for="ChainCode" class="form-control" />
-				<span asp-validation-for="ChainCode" class="text-danger"></span>
+					<div class="form-group mb-3">
+						<label asp-for="ChainCode" class="control-label">Chain Code <info-icon name="info-chain-code" /></label>
+						<input asp-for="ChainCode" class="form-control" />
+						<span asp-validation-for="ChainCode" class="text-danger"></span>
+					</div>
+			
+					<div class="form-check form-switch mb-3">
+						<input asp-for="Enabled" type="checkbox" class="form-check-input " />
+						<label asp-for="Enabled" class="form-check-label"></label>&nbsp;
+						<info-icon name="info-enabled" />
+					</div>
+
+					<div class="form-group mb-3">
+						<label asp-for="Name" class="control-label">Name <info-icon name="info-name" /></label>
+						<input asp-for="Name" class="form-control" />
+						<span asp-validation-for="Name" class="text-danger"></span>
+					</div>
+
+
+					<div class="form-group mb-3">
+						<label asp-for="Description" class="control-label">Description <info-icon name="info-description" /></label>
+						<input asp-for="Description" class="form-control" />
+						<span asp-validation-for="Description" class="text-danger"></span>
+					</div>
+
+					<div class="form-group mb-3">
+						<label asp-for="Subtitle" class="control-label">Subtitle <info-icon name="info-subtitle" /></label>
+						<input asp-for="Subtitle" class="form-control" />
+						<span asp-validation-for="Subtitle" class="text-danger"></span>
+					</div>
+
+					<div class="form-group mb-3">
+						<label asp-for="ConfirmCopy" class="control-label">Confirm Copy <info-icon name="info-confirm-copy" /></label>
+						<input asp-for="ConfirmCopy" class="form-control" />
+						<span asp-validation-for="ConfirmCopy" class="text-danger"></span>
+					</div>
+
+					<div class="form-group mb-3">
+						<label asp-for="ImageFile" class="control-label">Image File <info-icon name="info-image-file" /></label>
+						<input asp-for="ImageFile" class="form-control" />
+						<span asp-validation-for="ImageFile" class="text-danger"></span>
+					</div>
+
+					<div class="form-group mb-3">
+						<label asp-for="SearchImageFile" class="control-label">Search Image File <info-icon name="info-search-image-file" /></label>
+						<input asp-for="SearchImageFile" class="form-control" />
+						<span asp-validation-for="SearchImageFile" class="text-danger"></span>
+					</div>
+
+					<div class="form-check form-switch mb-3">
+						<input asp-for="NoDogs" type="checkbox" class="form-check-input" />
+						<label asp-for="NoDogs" class="form-check-label">
+							No Dogs <info-icon name="info-no-dogs" />
+						</label>
+					</div>
+			
+					<div class="form-group mb-3">
+						<label asp-for="NoDogsText" class="control-label">No Dogs Text <info-icon name="info-no-dogs" /></label>
+						<input asp-for="NoDogsText" class="form-control" />
+						<span asp-validation-for="NoDogsText" class="text-danger"></span>
+					</div>
+
+
+					<div class="form-group mb-3">
+						<label asp-for="CrsNumber" class="control-label">CRS Number <info-icon name="info-crs-number" /></label>
+						<input asp-for="CrsNumber" class="form-control" />
+						<span asp-validation-for="CrsNumber" class="text-danger"></span>
+					</div>
+
+					<div class="form-group mb-3">
+						<label asp-for="CrsNumberInt" class="control-label">CRS Number International<info-icon name="info-crs-number-int" /></label>
+						<input asp-for="CrsNumberInt" class="form-control" />
+						<span asp-validation-for="CrsNumberInt" class="text-danger"></span>
+					</div>
+
+					<div class="form-group mb-3">
+						<label asp-for="DisabledText" class="control-label">Disabled Text<info-icon name="info-disabled-text" /></label>
+						<input asp-for="DisabledText" class="form-control" />
+						<span asp-validation-for="DisabledText" class="text-danger"></span>
+					</div>
+			
+					<div class="form-group mb-3">
+						<label asp-for="AdminNotes" class="control-label">Admin Notes <info-icon name="info-admin-notes" /></label>
+						<textarea asp-for="AdminNotes" class="form-control " ></textarea>
+						<span asp-validation-for="AdminNotes" class="text-danger"></span>
+					</div>
+			
+				
+				</div>
 			</div>
 			
-			<div class="form-check form-switch mb-3">
-				<input asp-for="Enabled" type="checkbox" class="form-check-input " />
-				<label asp-for="Enabled" class="form-check-label"></label>&nbsp;
-				<info-icon name="info-enabled" />
-			</div>
+			@await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
+			{
+				ReturnUrl = "/Admin/Hotels/",
+				ReturnText = ConstReturnText.ReturnToList,
+				SaveOperation = "submit"
+			})
 
-			<div class="form-group mb-3">
-				<label asp-for="Name" class="control-label">Name <info-icon name="info-name" /></label>
-				<input asp-for="Name" class="form-control" />
-				<span asp-validation-for="Name" class="text-danger"></span>
-			</div>
-
-
-			<div class="form-group mb-3">
-				<label asp-for="Description" class="control-label">Description <info-icon name="info-description" /></label>
-				<input asp-for="Description" class="form-control" />
-				<span asp-validation-for="Description" class="text-danger"></span>
-			</div>
-
-			<div class="form-group mb-3">
-				<label asp-for="Subtitle" class="control-label">Subtitle <info-icon name="info-subtitle" /></label>
-				<input asp-for="Subtitle" class="form-control" />
-				<span asp-validation-for="Subtitle" class="text-danger"></span>
-			</div>
-
-			<div class="form-group mb-3">
-				<label asp-for="ConfirmCopy" class="control-label">Confirm Copy <info-icon name="info-confirm-copy" /></label>
-				<input asp-for="ConfirmCopy" class="form-control" />
-				<span asp-validation-for="ConfirmCopy" class="text-danger"></span>
-			</div>
-
-			<div class="form-group mb-3">
-				<label asp-for="ImageFile" class="control-label">Image File <info-icon name="info-image-file" /></label>
-				<input asp-for="ImageFile" class="form-control" />
-				<span asp-validation-for="ImageFile" class="text-danger"></span>
-			</div>
-
-			<div class="form-group mb-3">
-				<label asp-for="SearchImageFile" class="control-label">Search Image File <info-icon name="info-search-image-file" /></label>
-				<input asp-for="SearchImageFile" class="form-control" />
-				<span asp-validation-for="SearchImageFile" class="text-danger"></span>
-			</div>
-
-			<div class="form-check form-switch mb-3">
-				<input asp-for="NoDogs" type="checkbox" class="form-check-input" />
-				<label asp-for="NoDogs" class="form-check-label">
-					No Dogs <info-icon name="info-no-dogs" />
-				</label>
-			</div>
-			
-			<div class="form-group mb-3">
-				<label asp-for="NoDogsText" class="control-label">No Dogs Text <info-icon name="info-no-dogs" /></label>
-				<input asp-for="NoDogsText" class="form-control" />
-				<span asp-validation-for="NoDogsText" class="text-danger"></span>
-			</div>
-
-
-			<div class="form-group mb-3">
-				<label asp-for="CrsNumber" class="control-label">CRS Number <info-icon name="info-crs-number" /></label>
-				<input asp-for="CrsNumber" class="form-control" />
-				<span asp-validation-for="CrsNumber" class="text-danger"></span>
-			</div>
-
-			<div class="form-group mb-3">
-				<label asp-for="CrsNumberInt" class="control-label">CRS Number International<info-icon name="info-crs-number-int" /></label>
-				<input asp-for="CrsNumberInt" class="form-control" />
-				<span asp-validation-for="CrsNumberInt" class="text-danger"></span>
-			</div>
-
-			<div class="form-group mb-3">
-				<label asp-for="DisabledText" class="control-label">Disabled Text<info-icon name="info-disabled-text" /></label>
-				<input asp-for="DisabledText" class="form-control" />
-				<span asp-validation-for="DisabledText" class="text-danger"></span>
-			</div>
-			
-			<div class="form-group mb-3">
-				<label asp-for="AdminNotes" class="control-label">Admin Notes <info-icon name="info-admin-notes" /></label>
-				<textarea asp-for="AdminNotes" class="form-control " ></textarea>
-				<span asp-validation-for="AdminNotes" class="text-danger"></span>
-			</div>
-			
-			<div class="input-group sticky-bottom">
-				<button type="submit" name="Command" class="btn btn-outline-primary">Save</button>
-				<a asp-controller="Hotels" asp-action="HotelList" class="btn btn-outline-secondary">Return to list</a>
-			</div>
-
-			
 		</form>
 
 	</div>
