--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_SpecialEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_SpecialEdit.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @using Msh.HotelCache.Models.Specials
+@using Msh.WebApp.Areas.Admin.Models
 @using Msh.WebApp.Models.Admin
 @using Msh.WebApp.TagHelpers
 @model Msh.HotelCache.Models.Specials.Special
@@ -18,100 +19,104 @@
 @await Html.PartialAsync("Admin/_AdminSaveSuccess", success)
 
 <div class="row">
-	<div class="col-6">
+	<div class="col-12">
 
 		<form asp-action="@formAction" asp-route-hotelCode="@hotelCode" id="main-form">
 
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			
+			<div class="row">
+				<div class="col-md-6 col-12">
 
-			<div class="form-group mb-3">
-				<label asp-for="Code" class="control-label"></label>&nbsp;
-				<info-icon name="info-code" />
-				@await Html.PartialAsync("Hotels/_EditCode", success)
+					<div class="form-group mb-3">
+						<label asp-for="Code" class="control-label"></label>&nbsp;
+						<info-icon name="info-code" />
+						@await Html.PartialAsync("Hotels/_EditCode", success)
+					</div>
+				
+					<div class="form-check form-switch mb-3">
+						<input asp-for="Enabled" type="checkbox" class="form-check-input " />
+						<label asp-for="Enabled" class="form-check-label"></label>&nbsp;
+						<info-icon name="info-enabled" />
+					</div>
+				
+					<div class="form-check form-switch mb-3">
+						<input asp-for="AdultsOnly" type="checkbox" class="form-check-input " />
+						<label asp-for="AdultsOnly" class="form-check-label"></label>&nbsp;
+						<info-icon name="info-adults-only" />
+					</div>
+
+				
+					<div class="form-group mb-3">
+						<label asp-for="ItemType" class="control-label"></label>&nbsp;
+						<info-icon name="info-item-type" />
+						<select asp-for="ItemType" class="form-control" asp-items="Html.GetEnumSelectList<SpecialItemType>()"></select>
+						<span asp-validation-for="ItemType" class="text-danger"></span>
+					</div>
+
+
+					<div class="form-group mb-3">
+						<label asp-for="Text" class="control-label"></label>&nbsp;
+						<info-icon name="info-text" />
+						<input asp-for="Text" class="form-control " />
+						<span asp-validation-for="Text" class="text-danger"></span>
+					</div>
+
+
+					<div class="form-group mb-3">
+						<label asp-for="SelectedText" class="control-label"></label>&nbsp;
+						<info-icon name="info-selected-text" />
+						<input asp-for="SelectedText" class="form-control " />
+						<span asp-validation-for="SelectedText" class="text-danger"></span>
+					</div>
+
+
+					<div class="form-group mb-3">
+						<label asp-for="ShortText" class="control-label"></label>&nbsp;
+						<info-icon name="info-short-text" />
+						<input asp-for="ShortText" class="form-control " />
+						<span asp-validation-for="ShortText" class="text-danger"></span>
+					</div>
+
+
+					<div class="form-check form-switch mb-3">
+						<input asp-for="IsValued" type="checkbox" class="form-check-input " />
+						<label asp-for="IsValued" class="form-check-label"></label>&nbsp;
+						<info-icon name="info-is-valued" />
+					</div>
+
+
+					<div class="form-check form-switch mb-3">
+						<input asp-for="SingleLine" type="checkbox" class="form-check-input " />
+						<label asp-for="SingleLine" class="form-check-label"></label>&nbsp;
+						<info-icon name="info-single-line" />
+					</div>
+
+
+					<div class="form-group mb-3">
+						<label asp-for="WarningText" class="control-label"></label>&nbsp;
+						<info-icon name="info-warning-text" />
+						<input asp-for="WarningText" class="form-control " />
+						<span asp-validation-for="WarningText" class="text-danger"></span>
+					</div>
+
+
+					<div class="form-group mb-3">
+						<label asp-for="Notes" class="control-label"></label>&nbsp;
+						<info-icon name="info-notes" />
+						<textarea asp-for="Notes" class="form-control "></textarea>
+						<span asp-validation-for="Notes" class="text-danger"></span>
+					</div>
+
+				</div>
 			</div>
 			
-			<div class="form-check form-switch mb-3">
-				<input asp-for="Enabled" type="checkbox" class="form-check-input " />
-				<label asp-for="Enabled" class="form-check-label"></label>&nbsp;
-				<info-icon name="info-enabled" />
-			</div>
-			
-			<div class="form-check form-switch mb-3">
-				<input asp-for="AdultsOnly" type="checkbox" class="form-check-input " />
-				<label asp-for="AdultsOnly" class="form-check-label"></label>&nbsp;
-				<info-icon name="info-adults-only" />
-			</div>
-
-			
-			<div class="form-group mb-3">
-				<label asp-for="ItemType" class="control-label"></label>&nbsp;
-				<info-icon name="info-item-type" />
-				<select asp-for="ItemType" class="form-control" asp-items="Html.GetEnumSelectList<SpecialItemType>()"></select>
-				<span asp-validation-for="ItemType" class="text-danger"></span>
-			</div>
-
-
-			<div class="form-group mb-3">
-				<label asp-for="Text" class="control-label"></label>&nbsp;
-				<info-icon name="info-text" />
-				<input asp-for="Text" class="form-control " />
-				<span asp-validation-for="Text" class="text-danger"></span>
-			</div>
-
-
-			<div class="form-group mb-3">
-				<label asp-for="SelectedText" class="control-label"></label>&nbsp;
-				<info-icon name="info-selected-text" />
-				<input asp-for="SelectedText" class="form-control " />
-				<span asp-validation-for="SelectedText" class="text-danger"></span>
-			</div>
-
-
-			<div class="form-group mb-3">
-				<label asp-for="ShortText" class="control-label"></label>&nbsp;
-				<info-icon name="info-short-text" />
-				<input asp-for="ShortText" class="form-control " />
-				<span asp-validation-for="ShortText" class="text-danger"></span>
-			</div>
-
-
-			<div class="form-check form-switch mb-3">
-				<input asp-for="IsValued" type="checkbox" class="form-check-input " />
-				<label asp-for="IsValued" class="form-check-label"></label>&nbsp;
-				<info-icon name="info-is-valued" />
-			</div>
-
-
-			<div class="form-check form-switch mb-3">
-				<input asp-for="SingleLine" type="checkbox" class="form-check-input " />
-				<label asp-for="SingleLine" class="form-check-label"></label>&nbsp;
-				<info-icon name="info-single-line" />
-			</div>
-
-
-			<div class="form-group mb-3">
-				<label asp-for="WarningText" class="control-label"></label>&nbsp;
-				<info-icon name="info-warning-text" />
-				<input asp-for="WarningText" class="form-control " />
-				<span asp-validation-for="WarningText" class="text-danger"></span>
-			</div>
-
-
-			<div class="form-group mb-3">
-				<label asp-for="Notes" class="control-label"></label>&nbsp;
-				<info-icon name="info-notes" />
-				<textarea asp-for="Notes" class="form-control "></textarea>
-				<span asp-validation-for="Notes" class="text-danger"></span>
-			</div>
-
-
-			
-			
-			
-			<div class="input-group sticky-bottom">
-				<button type="submit" name="Command" value="Save" class="btn btn-outline-primary">Save</button>
-				<a asp-controller="Hotels" asp-action="SpecialsList" asp-route-hotelCode="@hotelCode" class="btn btn-outline-secondary">Return to list</a>
-			</div>
+			@await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
+			{
+				ReturnUrl = $"/Admin/Hotels/SpecialsList?hotelCode={hotelCode}",
+				ReturnText = ConstReturnText.ReturnToDash,
+				SaveOperation = "#save-ows-config-triggers"
+			})
 
 		</form>
 
