--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/_PublishArchiveLoadLock.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/_PublishArchiveLoadLock.cshtml
@@ -1,22 +1,29 @@
-﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
-@model Msh.WebApp.Areas.Admin.Models.PublishArchiveLoadLockVm
+﻿@model Msh.WebApp.Areas.Admin.Models.PublishArchiveLoadLockVm
 @{
 	var publishMethod = Model.OnclickPublish;
 	var loadMethod = Model.OnclickLoad;
 	var lockMethod = Model.OnclickLock;
 	var archiveMethod = Model.OnclickArchive;
 }	
-																								
-<div class="mt-3 sticky-bottom" style="display:flex;justify-content:start;width:100%;">
-	<div class="input-group">
-		@if (Model.IncludeSave)
-		{
-			<button type="submit" name="Command" value="Save" class="btn btn-outline-primary">Save</button>
-		}
-		<button class="btn btn-outline-primary" class="mr-3" onclick="@publishMethod">Publish</button>
-		<button class="btn btn-outline-primary" class="mr-3" onclick="@archiveMethod">Archive</button>
-		<button class="btn btn-outline-primary" class="mr-3" onclick="@loadMethod">Load</button>
-		<button class="btn btn-outline-primary" class="mr-3" onclick="@lockMethod">Lock</button>
-		<a asp-contoller="@Model.ReturnController" asp-action="@Model.ReturnAction" class="btn btn-outline-secondary">Dashboard</a>
+		
+<div class="row mt-3 sticky-bottom">
+	<div class="col-12 d-inline-flex justify-content-start flex-wrap" style="width:100%;">
+
+		@await Html.PartialAsync("_SaveReturnButtonsPart", Model)
+
+		<div class="input-group mt-2 ml-2" style="width:auto;margin-right:3px;">
+			<button class="btn btn-outline-primary" class="ml-3" onclick="@publishMethod">Publish</button>
+			<button class="btn btn-outline-primary" class="mr-3" onclick="@archiveMethod">Archive</button>
+
+		</div>
+		<div class="input-group mt-2 ml-2" style="width:auto;">
+			<button class="btn btn-outline-primary" class="mr-3" onclick="@loadMethod">Load</button>
+			<button class="btn btn-outline-primary" class="mr-3" onclick="@lockMethod">Lock</button>
+		</div>
+		<div class="input-group mt-2 ml-5" style="width:auto;margin-left:5px;">
+			<div class="btn btn-outline-primary">
+				<info-icon name="info-publish" />
+			</div>
+		</div>
 	</div>
 </div>
