--- a/solution/Msh/Msh.WebApp/Views/Shared/Admin/_AdminSaveSuccess.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Shared/Admin/_AdminSaveSuccess.cshtml
@@ -3,16 +3,13 @@
 	var isSuccess = ViewBag?.IsSuccess ?? false;
 }
 
+<input type="hidden" id="is-success" value="@isSuccess" />
 @if (@isSuccess)
 {
-	<input type="hidden" id="is-success" value ="true"/>
+	
 	<div id="success-alert" class="alert alert-success alert-dismissible fade show" role="alert">
 		<strong>Success!</strong> You have saved the @Model.ModelName.<br/>
-		<a href="@Model.ReturnPath">Return to @Model.ReturnPathName</a>
+		<a href="@Model.ReturnUrl">@Model.ReturnText</a>
 		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 	</div>
-}
-else
-{
-	<input type="hidden" id="is-success" value="false" />
 }
